--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <a href="#about">About</a>
                     <a href="#credibility">Experience</a>
                     <a href="#focus">Services</a>
-                    <a href="{{ (base_path or '') }}/blog/index.html">Blog</a>
+                    <a href="{{ (base_path or '') }}/blog/">Blog</a>
                     <a href="#contact">Get Started</a>
                 </div>
                 <div class="nav-controls">
